Fix overflow-y prop

--- a/src/components/totals/totals.css
+++ b/src/components/totals/totals.css
@@ -37,5 +37,5 @@
   text-align: center;
   border: 2px solid blue;
   border-radius: 3%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
